force-app/main/default/objects/Topic__c.object
<CustomObject>
    <description>This object captures the various topics that could be discussed during a MonTRACK call</description>
    <fields>
        <fullName>Alias__c</fullName>
        <description>The name of record migrated from source org</description>
        <externalId>true</externalId>
        <label>Alias</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Captures a range of topics that can be discussed. It depends on the type of topic selected</description>
        <label>Description</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>No topic discussed</fullName>
                </value>
                <value>
                    <fullName>Academic - Attendance (lectures, tutorials, labs etc.)</fullName>
                </value>
                <value>
                    <fullName>Academic - English Proficiency spoken or written</fullName>
                </value>
                <value>
                    <fullName>Academic - Essay, report and assignment writing</fullName>
                </value>
                <value>
                    <fullName>Academic - Exam anxiety</fullName>
                </value>
                <value>
                    <fullName>Academic - Exam preparation/revision</fullName>
                </value>
                <value>
                    <fullName>Academic - Exam timetable</fullName>
                </value>
                <value>
                    <fullName>Academic - Exam venue/transport</fullName>
                </value>
                <value>
                    <fullName>Academic - Lecturer/tutor issues</fullName>
                </value>
                <value>
                    <fullName>Academic - Referencing and citing</fullName>
                </value>
                <value>
                    <fullName>Academic - Results</fullName>
                </value>
                <value>
                    <fullName>Academic - Special consideration</fullName>
                </value>
                <value>
                    <fullName>Academic - Timetable issues</fullName>
                </value>
                <value>
                    <fullName>Academic - Unit Advice</fullName>
                </value>
                <value>
                    <fullName>Academic - Workload/time management</fullName>
                </value>
                <value>
                    <fullName>Administration - Encumbrance</fullName>
                </value>
                <value>
                    <fullName>Administration - Enrolment queries/difficulties</fullName>
                </value>
                <value>
                    <fullName>Administration - Fees</fullName>
                </value>
                <value>
                    <fullName>Administration - Financial issues/difficulties</fullName>
                </value>
                <value>
                    <fullName>Administration - Moodle</fullName>
                </value>
                <value>
                    <fullName>Administration - Orientation will miss/has missed</fullName>
                </value>
                <value>
                    <fullName>Administration - Parking on campus</fullName>
                </value>
                <value>
                    <fullName>Administration - Parking permits</fullName>
                </value>
                <value>
                    <fullName>Administration - Scholarships/bursaries</fullName>
                </value>
                <value>
                    <fullName>Administration - Semester dates</fullName>
                </value>
                <value>
                    <fullName>Administratoin - IT issues</fullName>
                    <label>Administration - IT issues</label>
                </value>
                <value>
                    <fullName>Course - Career</fullName>
                </value>
                <value>
                    <fullName>Course - Change load</fullName>
                </value>
                <value>
                    <fullName>Course – Choice/preference</fullName>
                </value>
                <value>
                    <fullName>Course - Credit/RPL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Round__c</fullName>
        <description>Identifies the related call round</description>
        <label>Round</label>
        <referenceTo>Round__c</referenceTo>
        <relationshipLabel>Transition Topics</relationshipLabel>
        <relationshipName>Transition_Topics</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>SSA_Identified__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Identifies the SSA</description>
        <label>SSA Identified</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Transition_Topics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Student__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Identifies the student/contact</description>
        <label>Student</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Transition Topics</relationshipLabel>
        <relationshipName>Transition_Topics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Captures the type of topic</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
                <value>
                    <fullName>Montrack</fullName>
                </value>
                <value>
                    <fullName>Other Campaign (Not Montrack) 1</fullName>
                </value>
                <value>
                    <fullName>Other Campaign (Not Montrack) 2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Transition Topic</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TT-{00000}</displayFormat>
        <label>Transition Topic Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transition Topics</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>